--- a/app/views/users/_login.html.erb
+++ b/app/views/users/_login.html.erb
@@ -1,1 +1,9 @@
 <h1>login!</h1>
+
+<%= form_tag sessions_path do %>
+  <%= label_tag :email %>
+  <%= text_field_tag :email %>
+  <%= label_tag :password %>
+  <%= password_field_tag :password %>
+  <%= submit_tag("Sign Up!") %>
+<% end %>
