--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -1,1 +1,9 @@
 <h1>signup</h1>
+
+<%= form_for @user, :html => { :id => "sign_up" } do |f| %>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  <%= f.submit %>
+<% end %>
