--- a/app/views/users/_login.html.erb
+++ b/app/views/users/_login.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_tag sessions_path do %>
   <%= label_tag :email %>
-  <%= text_field_tag :email %>
+  <%= email_field_tag :email %>
   <%= label_tag :password %>
   <%= password_field_tag :password %>
-  <%= submit_tag("Sign Up!") %>
+  <%= submit_tag("Log In") %>
 <% end %>
