--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for @user, :html => { :id => "sign_up" } do |f| %>
   <%= f.label :email %>
-  <%= f.text_field :email %>
+  <%= f.email_field :email %>
   <%= f.label :password %>
   <%= f.password_field :password %>
-  <%= f.submit %>
+  <%= f.submit("Sign Up") %>
 <% end %>
