--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav id="">
+    <ul>
+      <li><a href="#">View Rules</a></li>
+    </ul>
+  </nav>
 
 <%= yield %>
 
