--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
 <div class='header'></div>
 <div id="login_signup">
-<button id='login'>LogIn</button>
-<button id='signup'>SignUp</button>
+  <button id='login'>LogIn</button>
+  <button id='signup'>SignUp</button>
 </div>
 <div id="about_game">
-<p>This is an awesome game that you should PLAY RIGHT NOW. The fun starts at exactly 5:00pm EVERY FRIDAY, and lasts until SATURDAYYYYY. WOOT WOOT</p>
+  <p>
+    This is an awesome game that you should PLAY RIGHT NOW. The fun starts at exactly 5:00pm EVERY FRIDAY, and lasts until SATURDAYYYYY. WOOT WOOT. Here is where we have flavor text describing what the game is to people who are potentially interested in playing.
+  </p>
 </div>
