--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,15 +1,39 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+#body {
+	height: 100%;
+	width: 100%
+}
 
 #header {
-  position:fixed;
+	position: fixed;
+	top: 0px;
   height:20%;
-  background-color:blue;
+  background-color:#142900;
+  width: 100%;
+  min-height: 20%
+}
+
+#center {
+	margin-left: 45%;
+	background-color: white;
+	margin-top: 8%;
+	height: 80%;
+	width: 100%;
 }
 
 #footer {
-  position: fixed;
+	position: fixed;
+	bottom: 0px;
   height: 20%;
-  background_color:green;
+  background-color:#142900;
+  width: 100%;
 }
+
