--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,11 @@
-<div class='header'></div>
-<div id="login_signup">
-<button id='login'>LogIn</button>
-<button id='signup'>SignUp</button>
+<div id ='header'></div>
+<div id ='center'>
+	<div id="login_signup">
+		<button id='login'>LogIn</button>
+		<button id='signup'>SignUp</button>
+	</div>
+	<div id="about_game">
+		<p>This is an awesome game that you should PLAY RIGHT NOW. The fun starts at exactly 5:00pm EVERY FRIDAY, and lasts until SATURDAYYYYY. WOOT WOOT</p>
+	</div>
 </div>
-<div id="about_game">
-<p>This is an awesome game that you should PLAY RIGHT NOW. The fun starts at exactly 5:00pm EVERY FRIDAY, and lasts until SATURDAYYYYY. WOOT WOOT</p>
-</div>
+<div id ='footer'></div>
