--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,15 @@
-<div id ='header'></div>
+<div id ='header'>
+	<h1 id = 'title'>Zombify!</h1>
+</div>
 <div id ='center'>
 	<div id="login_signup">
-		<button id='login'>LogIn</button>
+		<button id='login'>LogIn</button><br>
 		<button id='signup'>SignUp</button>
 	</div>
+</div>
+<div id ='footer'>
 	<div id="about_game">
-		<p>This is an awesome game that you should PLAY RIGHT NOW. The fun starts at exactly 5:00pm EVERY FRIDAY, and lasts until SATURDAYYYYY. WOOT WOOT</p>
+		<p> Zombify is a real-time RPG that combines elements of scavenger hunting and Zombie madness!</p> 
+		<p>A new game starts every Friday at 5pm. Sign up now to join the next available game!<p>
 	</div>
 </div>
-<div id ='footer'></div>
