--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -53,7 +53,7 @@
 	body {
 		background-image: url("Zombie_1.jpg");
 		background-repeat: no-repeat;
-		background-position: center 50px;
+		background-position: center;
 		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #444;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
