posts migration with view rendering collection of partials

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 <%= link_to "logout", session_path(@user), :method => 'DELETE' %>
 
 <div id="feed">
+<%= render partial: "events/event", collection: @events %>
 
 </div>
 
