--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -61,22 +61,14 @@
 		-webkit-text-size-adjust: 100%;
  }
 
- .header {
-  width: 100%;
-  background-color: blue;
-  position: fixed;
-  top: 0;
-  height: 60px;
-}
 
 .content {
-	background-image: url("Zombie_1.jpg");
-	background-repeat: no-repeat;
+	background-color:orange;
 	background-position: absolute;
 	position:relative;
 	height:100%;
-	width:80%;
-	padding: 60px 0 30px 0;
+	width:100%;
+	margin:0px;
 }
 
 .sidebar1, .sidebar2 {
@@ -87,28 +79,26 @@
 	background-color: yellow;
 }
 
-.sidebar1 { left:0;}
+.sidebar1 {left:0;}
 .sidebar2 {right:0;}
 
 #feed {
-	height:100%;
-	min-width:300px;
-	margin-left:100px;
-	margin-right:100px;
+	position: fixed;
+	height:70%;
+	width: 100%;
+	padding: 10%;
+/*	margin:auto;*/
 	overflow:auto;
-	opacity: 0.6;
 	background-color: #ccc;
 }
 
 .event {
-	padding: 20px;
-	margin: 30px;
-	border: 5px solid blue;
+	padding: 5%;
+	margin: 5%;
 	border-radius:20px;
-	background-color: yellow;
+	background-color: orange;
 
 }
-
 
 
 /* #Typography
