--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,17 @@
-
-<div id ='header'>
-	<h1 id = 'title'>Zombify!</h1>
-</div>
-<div id ='center'>
-	<div id="login_signup">
-		<button id='login'>LogIn</button><br>
-		<button id='signup'>SignUp</button>
-	</div>
-</div>
-<div id ='footer'>
-	<div id="about_game">
-		<p> Zombify is a real-time RPG that combines elements of scavenger hunting and Zombie madness!</p> 
-		<p>A new game starts every Friday at 5pm. Sign up now to join the next available game!<p>
-	</div>
+<div class=".content">
+  <div class='header'>
+  	<h1 id = 'title'>Zombify!</h1>
+  </div>
+  <div id ='center'>
+  	<div id="login_signup">
+  		<button id='login'>LogIn</button><br>
+  		<button id='signup'>SignUp</button>
+  	</div>
+  </div>
+  <div class='footer'>
+  	<div id="about_game">
+  		<p> Zombify is a real-time RPG that combines elements of scavenger hunting and Zombie madness!</p>
+  		<p>A new game starts every Friday at 5pm. Sign up now to join the next available game!<p>
+  	</div>
+  </div>
 </div>
