--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,17 @@
-<div class="content">
-<div class="header">
-<ul>
-<li><span></span></li>
-<li><span></span></li>
-<li><span></span></li>
-</ul>
-<%= link_to "logout", session_path(@user), :method => 'DELETE' %>
-</div>
-<div class="sidebar1"></div>
-<div id="feed">
-<%= render partial: "events/event", collection: @events %>
 
-</div>
-<div class="sidebar2"></div>
-<div class="twelve_columns" id="footer">
-  <ul>
-    <li><button id="confront">Battle!</button></li>
-    <li><button id="rules">View Rules</button></li>
-    <li>Your Personal Id: <span></span></li>
-  </ul>
-</div>
-</div>
+  <div id="feed">
+  <%= render partial: "events/event", collection: @events %>
+
+  </div>
+  <!-- <div class="sidebar2"></div> -->
+  <div class="twelve_columns" id="footer">
+  <%= link_to "logout", session_path(@user), :method => 'DELETE' %>
+    <ul>
+      <li><button id="confront">Battle!</button></li>
+      <li><button id="rules">View Rules</button></li>
+      <li>Your Personal Id: <span></span></li>
+      <li><a href="#">View Rules</a></li>
+
+    </nav>
+    </ul>
+  </div>
