moved event partial to users folder

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
   <div id="feed">
-  <%= render partial: "events/event", collection: @events %>
+  <%= render partial: "event", collection: @events %>
 
   </div>
   <!-- <div class="sidebar2"></div> -->
