--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,9 +15,9 @@
 <div class="sidebar2"></div>
 <div class="twelve_columns" id="footer">
   <ul>
-    <li><button id="confront">Battle!</button></li>
+    <li><button><%= link_to "Battle!", new_battle_path, id: "confront", remote: "true" %></button></li>
     <li><button id="rules">View Rules</button></li>
-    <li>Your Personal Id: <span></span></li>
+    <li><h2>Your Personal Id: <%= @user.handle %></h2><span></span></li>
   </ul>
 </div>
 </div>
