--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -50,7 +50,7 @@
 }
 
 #title {
-	margin-top: 1%;
+	margin-top: 3%;
 	margin-left: 43%;
 	color: white;
 }
@@ -66,6 +66,7 @@
 	margin-top: 1%;
 	width: 50%;
 	color: white;
+	font-family: 'Rock Salt', cursive;
 }
 
 #login, #signup {
