--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class=".content">
   <div class='header'>
-  	<h1 id = 'title'>Zombify!</h1>
+  	<h1 id = 'title'>Zombify</h1>
   </div>
   <div id ='center'>
   	<div id="login_signup">
