--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -258,6 +258,7 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="tel"],
 	textarea,
 	select {
 		border: 1px solid #ccc;
