--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -63,7 +63,7 @@
 
 
 .content {
-	background-color:orange;
+	background-image: url("Zombie_1.jpg");
 	background-position: absolute;
 	position:relative;
 	height:100%;
