--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -64,7 +64,9 @@
 
 .content {
 	background-image: url("Zombie_1.jpg");
+	background-repeat: no-repeat;
 	background-position: absolute;
+	background-size: 100%;
 	position:relative;
 	height:100%;
 	width:100%;
