--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -79,3 +79,36 @@ li {
 	float: left
 }
 
+.black_overlay{
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index:1001;
+    -moz-opacity: 0.8;
+    opacity:.80;
+    filter: alpha(opacity=80);
+}
+ 
+.white_content {
+		text-align: center;
+    display: none;
+    position: absolute;
+    top: 25%%;
+    left: 25%;
+    width: 50%;
+    height: 55%;
+    padding: 16px;
+    border: 16px solid orange;
+    background-color: white;
+    z-index:1002;
+    overflow: auto;
+}
+
+#hide_me {
+	margin-top: 2%;
+}
+
