--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,20 @@
   <%= link_to "logout", session_path(@user), :method => 'DELETE' %>
     <ul>
       <li><button><%= link_to "Battle!", new_battle_path, id: "confront", remote: "true" %></button></li>
-      <li><button id="rules">View Rules</button></li>
+      <li><button id="rules" onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">View Rules</button></li>
     </nav>
     </ul>
   </div>
+
+<!-- Hidden light box below -->
+  <div id="light" class="white_content"><h1>Rules</h1>
+    <ul>
+      <li>Keep your tag visible at all times</li>
+      <li>If an opponent taps you to do battle, you must stop and allow him or her to read your tag #</li>
+      <li>Don't leave the city for the duration of the game</li>
+      <li>Don't communicate your location to the opposite team</li>
+    </ul>
+    <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';
+    document.getElementById('fade').style.display='none'">Hide me</button>
+    </div>
+<div id="fade" class="black_overlay"></div>
