adds minor styling fixes to the rules popup

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -100,7 +100,7 @@ li {
     top: 25%%;
     left: 25%;
     width: 50%;
-    height: 55%;
+    height: 50%;
     padding: 16px;
     border: 16px solid orange;
     background-color: white;
@@ -109,6 +109,10 @@ li {
 }
 
 #hide_me {
-	margin-top: 2%;
+	margin: 20% auto 0 auto;
+}
+
+#rules_list {
+	margin-top: 5%;
 }
 
