--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,13 +15,15 @@
 
 <!-- Hidden light box below -->
   <div id="light" class="white_content"><h1>Rules</h1>
-    <ul>
-      <li>Keep your tag visible at all times</li>
-      <li>If an opponent taps you to do battle, you must stop and allow him or her to read your tag #</li>
-      <li>Don't leave the city for the duration of the game</li>
-      <li>Don't communicate your location to the opposite team</li>
+    <ul id = "rules_list">
+      <li>1. Keep your tag visible at all times</li>
+      <li>2. If an opponent taps you to do battle, you must stop and allow him or her to read your tag #</li>
+      <li>3. Don't leave the city for the duration of the game</li>
+      <li>4. Don't communicate your location to the opposite team</li>
+      <li>5. Zombies must wear their headbands on their heads</li>
+      <li>6. Humans must wear their headbands on their arms</li>
     </ul>
     <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';
-    document.getElementById('fade').style.display='none'">Hide me</button>
+    document.getElementById('fade').style.display='none'">I got it, thanks!</button>
     </div>
 <div id="fade" class="black_overlay"></div>
