--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,1 +1,2 @@
-Here is a game. You will see a feed if the game is active, and a message about waiting if the game in inactive.
+Here is a game. You will see a feed if the game is active, and a message abou
+t waiting if the game in inactive.
