--- a/app/views/users/_event.html.erb
+++ b/app/views/users/_event.html.erb
@@ -1,6 +1,6 @@
 <div class="event">
-
-<h3><%= event.title %></h3>
-<p><%= event.body %></p>
-
+	<div id = 'post_container'>
+		<h3><%= event.title %></h3>
+		<p><%= event.body %></p>
+	</div>
 </div>
