--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
           Your SignIn Failed, try again.
         </h4>
         <% end -%>
-  		<button id='login'>LogIn</button><br>
-  		<button id='signup'>SignUp</button>
+  		<button id='log_in'>LogIn</button><br>
+  		<button id='sign_up'>SignUp</button>
   	</div>
   </div>
