--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,8 +54,7 @@ html p {
  }
 
  html button {
-	background-color: #949470
-;
+	background-color: #949470;
     border-radius: 5px;
     border: 2px solid #273519;
     color: black;
