added margin to top of form partials, tweaked things to make their layout more consistent

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,6 +114,14 @@ HOMEPAGE*/
 	padding-bottom: 20%;
 }
 
+#login {
+    margin-top: 15%;
+}
+
+#signup {
+    margin-top: 15%;
+}
+
 #title {
 	color: white;
 }
