--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,21 +77,9 @@ html li {
     /*margin: 2%;*/
 }
 
-html ul li a {
+html a {
     color: black;
 }
-
-/*.blue {
-	background-color: blue;
-}
-
-.left p {
-	color: red;
-}
-
-.right p {
-	color: green;
-}*/
 
 /*
 HOMEPAGE*/
@@ -108,6 +96,10 @@ HOMEPAGE*/
 
 #title {
 	color: white;
+}
+
+#sign_up, #log_in {
+    opacity: .8;
 }
 
 /*/Users/*/
@@ -133,14 +125,14 @@ HOMEPAGE*/
     left: 0%;
     width: 100%;
     height: 100%;
-    background-color: black;
+    /*background-color: black;*/
     z-index:1001;
     -moz-opacity: 0.8;
     opacity:.80;
     filter: alpha(opacity=80);
 } 
 .white_content {
-		text-align: center;
+	/*text-align: center;*/
     display: none;
     position: absolute;
     top: 25%%;
@@ -148,7 +140,7 @@ HOMEPAGE*/
     width: 50%;
     height: 50%;
     padding: 16px;
-    border: 16px solid orange;
+    border: 16px solid black;
     background-color: white;
     z-index:1002;
     overflow: auto;
