--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -1,3 +1,4 @@
+<div class = "five columns offset-by-three"id = 'signup'>
 <h1>signup</h1>
 
 <%= form_for @user, :html => { :id => "sign_up" } do |f| %>
@@ -11,4 +12,4 @@
   <%= f.password_field :password %>
   <%= f.submit("Sign Up") %>
 <% end %>
-
+</div>
