adds mobile-friendly menu

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,15 +17,15 @@
 }
 
 html p {
-	font-family: tahoma;
-	}
+    font-family: tahoma;
+    }
 
 
  html header {
- 	background-color: #273519;
- 	color: white;
- 	text-align: center;
- 	padding: 10px;
+    background-color: #273519;
+    color: white;
+    text-align: center;
+    padding: 10px;
     width: 100%;
     position: fixed;
     top: 0px;
@@ -33,14 +33,14 @@ html p {
  }
 
  html h1, html h2, html h3  {
- 	font-family: 'Rock Salt', cursive; 
- 	margin: 0;
+    font-family: 'Rock Salt', cursive; 
+    margin: 0;
     padding: 0;
  }
 
 #footer {
- 	background-color: #273519;
- 	height: auto;
+    background-color: #273519;
+    min-height: auto;
     width: 100%;
     position:fixed;
     height: 15%;
@@ -48,13 +48,13 @@ html p {
  }
 
  footer p {
- 	font-size: 10px;
- 	text-align: center;
- 	margin: 0;
+    font-size: 10px;
+    text-align: center;
+    margin: 0;
  }
 
  html button {
-	background-color: #949470;
+    background-color: #949470;
     border-radius: 5px;
     border: 2px solid #273519;
     color: black;
@@ -62,11 +62,9 @@ html p {
 
 html button:hover {
     background-color: #4D704D
-
 }
 
 html ul {
-    
     margin-right: 25%
 }
 
@@ -90,17 +88,17 @@ html a:hover {
 HOMEPAGE*/
 
 #login_signup {
-	background-image: url("Zombie_1.jpg");
-	background-repeat: no-repeat;
-	background-size: 100%;
-	height: 100%;
-	text-align: center;
-	padding-top: 20%;
-	padding-bottom: 20%;
+    background-image: url("Zombie_1.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 20%;
+    padding-bottom: 20%;
 }
 
 #title {
-	color: white;
+    color: white;
 }
 
 #sign_up, #log_in {
@@ -129,38 +127,96 @@ HOMEPAGE*/
 
 .black_overlay{
     display: none;
-    position: absolute;
+/*    position: relative;*/
     top: 0%;
     left: 0%;
     width: 100%;
     height: 100%;
-    /*background-color: black;*/
+    background-color: black;
     z-index:1001;
     -moz-opacity: 0.8;
     opacity:.80;
     filter: alpha(opacity=80);
 } 
 .white_content {
-	/*text-align: center;*/
+    /*text-align: center;*/
     display: none;
-    position: absolute;
+    position: fixed;
     top: 25%%;
     left: 25%;
     width: 50%;
     height: 50%;
     padding: 16px;
-    border: 16px solid black;
-    background-color: white;
+    background-color: black;
+    color: white;
     z-index:1002;
     overflow: auto;
 }
 #hide_me {
-	margin: 20% auto 0 auto;
+    margin: 20% auto 0 auto;
 }
 #rules_list {
-	margin-top: 5%;
+    margin-top: 5%;
 }
 
 #handle {
     color: white;
 }
+
+#menu {
+    display:none;
+    margin-left: 25%;
+    width: 50%;
+    font-family: 'Rock Salt', cursive; 
+}
+
+@media only screen and (min-width: 200px) and (max-device-width: 1136px){
+    #menu {
+    font-family: 'Rock Salt', cursive;
+    display: block; 
+    }
+
+    #feed {
+    margin-top: 30%;
+    }
+
+    .white_content {
+    /*text-align: center;*/
+    display: none;
+    position: fixed;
+    top: 5%;
+    left: 2.5%;
+    width: 95%;
+    height: 80%;
+    }
+
+    ul {
+    width: 100%
+    }
+
+    li {
+    width: 100%;
+    }
+
+    html button {
+     width: 100%;   
+    }
+
+    html a {
+      width: 100%;
+    }
+
+    #handle {
+      margin-bottom: 1%;
+    }
+ /*   html ul {
+    }
+
+    html li {
+    list-style-type: none;
+    }*/
+
+}
+ 
+
+
