polling now starts in view for user#show, only if there is an active game. End game displays if no active game

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,18 @@
 
   <div id="feed" data-user-infected = <%=@user.infected%>
                  data-user-id = <%= @user.id %>>
-  <%= render partial: "event", collection: @events %>
+
+  <% if Game.current %>
+    <%= render partial: "event", collection: @events %>
+    <script type="text/javascript">
+      $(function() {
+        polling.startPolling();
+      })
+    </script>
+  <% else %>
+    <%= render partial: "games/end_game" %>
+  <% end %>
+
   </div>
   <!-- <div class="sidebar2"></div> -->
   <div id="footer">
