--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,18 @@
   <body>
   <header>
     <h1 id = "title">Zombify</h1>
+    <% if @user.infected == false %>
+      <span><%="Your Points: "%></span><span id = "your_points"><%=@user.points%></span>
+      <span><%="Zombies Remaining: "%></span><span id = "zombies_remaining"><%=Stats.total_zombies%></span>
+  <!--     <span><%="total humans:"%></span><spanid = "humans_stats"><%=Stats.total_humans%></span> -->
+    <% end %>
+
+    <% if @user.infected == true %>
+      <span><%="Your Points: "%></span><span id = "your_points"><%=@user.points%></span>
+      <span><%="Humans Remaining: "%></span><span id = "zombies_remaining"><%=Stats.total_humans%></span>
+  <!--     <span><%="total humans:"%></span><spanid = "humans_stats"><%=Stats.total_humans%></span> -->
+    <% end %>
+
   </header>
     <%= yield %>
     <%= javascript_include_tag "application" %>
