--- a/app/views/users/_event.html.erb
+++ b/app/views/users/_event.html.erb
@@ -2,5 +2,6 @@
 	<div id = 'post_container'>
 		<h3><%= event.title %></h3>
 		<p><%= event.body %></p>
+		<p><%= event.created_at.in_time_zone("Pacific Time (US & Canada)").to_formatted_s(:long_ordinal)%>
 	</div>
 </div>
