--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
   <!-- <div class="sidebar2"></div> -->
   <div id="footer">
   <!-- this button is hidden unless mobile -->
-    <button id ="menu" onclick = "document.getElementById('menu_box').style.display='block';
+    <button id ="menu" onclick = "$('#menu_box').toggle();
     document.getElementById('fade').style.display='block'">Menu</button>
   <!--                                     -->
       <li><button><%= link_to "Battle!", new_battle_path, id: "confront", remote: "true" %></button></li>
@@ -36,14 +36,12 @@
     <ul>
       <li><h2 id = 'handle'>Code: <%= @user.handle%></h2></li>
       <li><button onclick = "document.getElementById('battle_box').style.display='block';document.getElementById('fade').style.display='block'"
-      style = "font-family: 'Rock Salt', cursive; ">Battle</button></li>
-      <li><button id="checkin"><a href="#">Send Location</a></button></li>
+      style = "font-family: 'Rock Salt', cursive; " class = ".inner">Battle</button></li>
+      <li><button id="checkin" class = ".inner"><a href="#">Send Location</a></button></li>
       <li><button id="rules" onclick = "document.getElementById('rules_box').style.display='block';document.getElementById('fade').style.display='block'"
-      style = "font-family: 'Rock Salt', cursive; ">View Rules</button></li>
-      <li><button><%= link_to "logout", session_path(@user), :method => 'DELETE' %></button></li>
+      style = "font-family: 'Rock Salt', cursive; " class = ".inner">View Rules</button></li>
+      <li><button class = ".inner"><%= link_to "logout", session_path(@user), :method => 'DELETE' %></button></li>
     </ul>
-    <button id = "hide_me_menu" href = "javascript:void(0)" onclick = "document.getElementById('menu_box').style.display='none';
-    document.getElementById('fade').style.display='none'">close menu</button>
     </div>
 <div id="fade" class="black_overlay"></div>
 
