--- a/app/views/battles/_battle_results.html.erb
+++ b/app/views/battles/_battle_results.html.erb
@@ -1,3 +1,3 @@
-<h1>Battle Results:</h1>
+<h3>Battle Results:</h3>
 <h1><%= result %></h1>
-<button class="confirm">OK!</button>
+<button class="confirm">I Accept</button>
