--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -51,15 +51,14 @@
 <!-- Battle -->
   <div id="battle_box" class="white_content"><h1>Battle</h1>
     <p>Prepare to fight!</p>
-    <form action="/battles" method="post" id="new-battle">
+    <form action="" method="put" id="new-battle">
       <label for="opponent_id">Enter your opponent's secret code: </label>
       <input type="text" name="opponent_id">
       <input type="submit" value="Tempt Fate">
     </form>
-    <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('battle_box').style.display='none';
-    document.getElementById('menu_box').style.display='none';
+    <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('battle_box').style.display='none'; document.getElementById('menu_box').style.display='none';
     document.getElementById('fade').style.display='none'">Battle!</button>
-    </div>
+  </div>
 <div id="fade" class="black_overlay"></div>
 
 <!-- Rules -->
