--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,7 +151,7 @@ HOMEPAGE*/
     /*text-align: center;*/
     display: none;
     position: fixed;
-/*    top: 25%%;*/
+    top: 25%;
     left: 25%;
     width: 50%;
     height: 100%;
