--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,8 +56,7 @@
       <input type="text" name="opponent_id">
       <input type="submit" value="Tempt Fate">
     </form>
-    <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('battle_box').style.display='none'; document.getElementById('menu_box').style.display='none';
-    document.getElementById('fade').style.display='none'">Battle!</button>
+    <button id = "hide_me" href = "javascript:void(0)" >Battle!</button>
   </div>
 <div id="fade" class="black_overlay"></div>
 
