adds back button for login and signup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,6 +122,14 @@ HOMEPAGE*/
   padding-bottom: 20%;
 }
 
+.back_link a {
+    color: gray;
+}
+
+.back_link a:hover {
+    color: black;
+}
+
 #title {
   color: white;
 }
