--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -10,6 +10,6 @@
   <%= f.email_field(:email, placeholder: 'ex: joe@joe.com', :required => true)  %>
   <%= f.label :password %>
   <%= f.password_field(:password, :required => true) %>
-  <%= f.submit("Sign Up") %>
+  <%= f.submit("Sign Up") %><span class = "back_link" ><a href="/">     return to home</a></span>
 <% end %>
 </div>
