Remove second Battle button

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,9 +54,8 @@
     <form action="" method="put" id="new-battle">
       <label for="opponent_id">Enter your opponent's secret code: </label>
       <input type="text" name="opponent_id">
-      <input type="submit" value="Tempt Fate">
+      <input id = "tempt-fate" type="submit" value="Tempt Fate">
     </form>
-    <button id = "hide_me" href = "javascript:void(0)" >Battle!</button>
   </div>
 <div id="fade" class="black_overlay"></div>
 
