--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,7 +56,7 @@ html p {
   overflow:visible;
  }
 
- html button {
+ html button, #tempt-fate {
   background-color: #949470;
   border-radius: 5px;
   border: 2px solid #273519;
