--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -223,7 +223,7 @@ HOMEPAGE*/
   font-family: 'Rock Salt', cursive; 
 }
 
-@media only screen and (min-width: 500px) and (max-width: 930px){
+@media only screen and (min-device-width: 901px) and (max-device-width: 930px){
   html header {
     height: 90px;
   }
@@ -257,19 +257,48 @@ HOMEPAGE*/
     margin-bottom: 5%;
     font-size: 15px;
   }
-
-  #feed {
-    padding-bottom: 27%;
-  }
 }
 
-@media only screen and (min-width: 200px) and (max-width: 500px){
+@media only screen and (min-device-width: 200px) and (max-device-width: 900px){
+  
+
   html header {
     height: 90px;
   }
 
   #feed {
     margin-top: 30%;
+  }
+
+  #footer {
+    background-color: black;
+    min-height: 10%;
+    width: 100%;
+    position:fixed;
+    height: 15%;
+    bottom: 0px;
+ }
+
+  .white_content {
+    /*text-align: center;*/
+    display: none;
+    position: fixed;
+    top: 1%;
+    left: 2.5%;
+    width: 95%;
+    height: 85%;
+  }
+
+  #handle {
+    text-align: center;
+    margin-bottom: 5%;
+    font-size: 15px;
+  }
+  #menu {
+    font-family: 'Rock Salt', cursive;
+    margin-top:1%;
+    margin-bottom: 7%;
+    display: block; 
   }
 
   ul {
