restricts user input in form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
     <p>Prepare to fight!</p>
     <form action="" method="put" id="new-battle">
       <label for="opponent_id">Enter your opponent's secret code: </label>
-      <input type="text" name="opponent_id">
+      <input type="text" name="opponent_id" maxlength="5">
       <input id = "tempt-fate" type="submit" value="Tempt Fate">
     </form>
   </div>
