--- a/app/views/games/_end_game.html.erb
+++ b/app/views/games/_end_game.html.erb
@@ -1,5 +1,7 @@
-<h1>GAME OVER</h1>
-<br>
-<div id= "stats">
-  <%= render partial: "statistics/stats" %>
+<div id="game-over" >
+  <h1>GAME OVER</h1>
+  <br>
+  <div id= "stats">
+    <%= render partial: "statistics/stats" %>
+  </div>
 </div>
