adds back button for battles popup and sets popup for checkin

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,12 +125,16 @@ HOMEPAGE*/
   padding-bottom: 20%;
 }
 
-.back_link a {
+.back_link a, .back_link_battle a {
     color: gray;
 }
 
 .back_link a:hover {
     color: black;
+}
+
+.back_link_battle a:hover {
+    color: white;
 }
 
 #title {
