adds default styling on confront and harvest buttons to be display:none

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,6 +59,10 @@ html p {
   overflow:visible;
  }
 
+ #confront, #checkin {
+  display: none;
+ }
+
  html button, #tempt-fate {
   background-color: #949470;
   border-radius: 5px;
