adds view changes for all four user states

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 
   <div id="feed" data-user-infected = <%=@user.infected%>
-                 data-user-id = <%= @user.id %>>
+                 data-user-id = <%= @user.id %>
+                 data-game-state = <%= Game.current.current_game_state %>>
 
   <% if Game.current %>
     <script type="text/javascript">
