--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -82,6 +82,6 @@
     <br>
     <br>
     <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('checkin_box').style.display='none';
-    document.getElementById('fade').style.display='none'">There it is!</button>
+    document.getElementById('fade').style.display='none'">Is it here?</button>
     </div>
 <div id="fade" class="black_overlay"></div>
